#184:remove warnings, remove jdk12 build